@@ -36,6 +36,7 @@ Please visit http://aegisub.net to download latest version
 - Added support to save and load keyframe list files. (AMZ)
 - Switching to a new line in audio mode now centers the line on the grid. (AMZ)
 - Commiting changes in audio to the last line will insert a new line after it. (AMZ)
+- Fonts collector can now collect fonts directly to a zip archive. (AMZ)
 
 
 = 1.10 beta - 2006.08.07 ===========================
